--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "vector"
-version = "0.35.0"
-authors = ["Vector Contributors <vector@datadoghq.com>"]
+version = "0.35.0-a"
+authors = ["Vector Contributors <vector@datadoghq.com>", "Dmitriy Ivkov"]
 edition = "2021"
 description = "A lightweight and ultra-fast tool for building observability pipelines"
 homepage = "https://vector.dev"
@@ -9,8 +9,7 @@ license = "MPL-2.0"
 readme = "README.md"
 publish = false
 default-run = "vector"
-autobenches = false # our benchmarks are not runnable on their own either way
-# Minimum supported rust version
+autobenches = false
 rust-version = "1.71.1"
 
 [[bin]]
@@ -36,11 +35,15 @@ test = false
 bench = false
 required-features = ["secret-backend-example"]
 
-# CI-based builds use full release optimization.  See scripts/environment/release-flags.sh.
-# This results in roughly a 5% reduction in performance when compiling locally vs when
-# compiled via the CI pipeline.
 [profile.release]
-debug = false # Do not include debug symbols in the executable.
+debug = false
+codegen-units = 16
+lto = true
+rustflags = ["-C", "target-cpu=native"]
+#opt-level="c"
+#opt-level="z"
+
+
 
 [profile.bench]
 debug = true
